# FireDetector

./: CMakeLists.txt  main.cpp  main_new.cpp
